--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -44,12 +44,12 @@
             android:textStyle="bold" />
 
         <EditText
-            android:id="@+id/loginUsername"
+            android:id="@+id/loginEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="15dp"
             android:layout_marginTop="20dp"
-            android:hint="Username"
+            android:hint="E-mail"
             android:textSize="25sp" />
 
 
