--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -44,7 +44,7 @@
             android:textStyle="bold" />
 
         <EditText
-            android:id="@+id/loginUsername"
+            android:id="@+id/registerUsername"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="15dp"
@@ -52,7 +52,7 @@
             android:hint="Username"
             android:textSize="25sp" />
         <EditText
-            android:id="@+id/loginEmail"
+            android:id="@+id/registerEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="15dp"
@@ -62,7 +62,7 @@
 
 
         <EditText
-            android:id="@+id/loginPassword"
+            android:id="@+id/registerPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="15dp"
@@ -74,7 +74,7 @@
 
 
         <TextView
-            android:id="@+id/loginSubmit"
+            android:id="@+id/registerSubmit"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginHorizontal="25dp"
@@ -99,7 +99,7 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/loginForgotPass"
+        android:id="@+id/register_to_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="უკვე ხართ დარეგისტრირებული?"
