--- a/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/shopping"
-        android:title="Shopping"
-        android:icon="@drawable/ic_shopping_cart"/>
+        android:id="@+id/homeFragment"
+        android:title="Home"
+        android:icon="@drawable/ic_home"/>
     <item
-        android:id="@+id/aboutApp"
+        android:id="@+id/aboutAppFragment"
         android:title="About app"
         android:icon="@drawable/ic_baseline_groups_24"
         />
         />
     <item
-        android:id="@+id/settings"
+        android:id="@+id/settingsFragment"
         android:title="Settings"
         android:icon="@drawable/ic_settings"
          />
 
     <item
-        android:id="@+id/profile"
+        android:id="@+id/profileFragment"
         android:title="Profile"
         android:icon="@drawable/ic_account"
         />
