--- a/app/src/main/res/navigation/nav_graph2.xml
+++ b/app/src/main/res/navigation/nav_graph2.xml
@@ -3,26 +3,26 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph2"
-    app:startDestination="@id/shoppingFragment">
+    app:startDestination="@id/homeFragment">
 
     <fragment
-        android:id="@+id/shoppingFragment"
-        android:name="com.example.shoppingapp.ShoppingFragment"
-        android:label="ShoppingFragment"
-        tools:layout="@layout/fragment_shopping"/>
+        android:id="@+id/homeFragment"
+        android:name="com.example.shoppingapp.fragments.HomeFragment"
+        android:label="HomeFragment"
+        tools:layout="@layout/fragment_home"/>
     <fragment
         android:id="@+id/aboutAppFragment"
-        android:name="com.example.shoppingapp.AboutAppFragment"
+        android:name="com.example.shoppingapp.fragments.AboutAppFragment"
         android:label="AboutAppFragment"
         tools:layout="@layout/fragment_about_app"/>
     <fragment
-        android:id="@+id/settingsFragment"
-        android:name="com.example.shoppingapp.SettingsFragment"
-        android:label="SettingsFragment"
-        tools:layout="@layout/fragment_settings"/>
-    <fragment
         android:id="@+id/profileFragment"
-        android:name="com.example.shoppingapp.ProfileFragment"
+        android:name="com.example.shoppingapp.fragments.ProfileFragment"
         android:label="ProfileFragment"
         tools:layout="@layout/fragment_profile"/>
+    <fragment
+        android:id="@+id/settingsFragment"
+        android:name="com.example.shoppingapp.fragments.SettingsFragment"
+        android:label="SettingsFragment"
+        tools:layout="@layout/fragment_settings"/>
 </navigation>
