--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -5,9 +5,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingTop="8dp"
     android:layout_marginHorizontal="8dp"
-    android:background="#4E4E4E">
+    android:background="#4E4E4E"
+    android:id="@+id/itemLayout">
 
     <LinearLayout
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -15,7 +17,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="#FFC107">
+        android:background="#FFC107"
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
