--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:background="#1E1E1E"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -21,17 +22,12 @@
             android:layout_height="wrap_content"
             app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
             app:navigationIconTint="@color/white"
-            app:title="Settings"
+            app:title="Cart"
             app:titleMarginStart="25dp"
             app:titleTextColor="#C8C6C6" />
 
 
     </androidx.appcompat.widget.Toolbar>
 
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/ic_settings" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
