--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -41,8 +41,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.90999997"
-        >
+        app:layout_constraintVertical_bias="0.97">
 
         <EditText
             android:id="@+id/inputItems"
@@ -59,25 +58,27 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <TextView
-                android:layout_marginTop="20dp"
                 android:id="@+id/addButton"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
+                android:layout_marginHorizontal="50dp"
+                android:layout_marginTop="20dp"
                 android:background="#FFC107"
                 android:gravity="center"
                 android:text="add"
-                android:textSize="25sp"
-                android:layout_marginHorizontal="50dp"/>
+                android:textSize="25sp" />
 
 
         </LinearLayout>
+
         <Button
             android:id="@+id/delete_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Delete Data"
-            android:onClick="deleteData" />
+            android:onClick="deleteData"
+            android:text="Delete Data" />
 
 
     </LinearLayout>
