--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -43,6 +43,17 @@
         app:layout_constraintTop_toBottomOf="@+id/detailToolbar"
         app:layout_constraintVertical_bias="0.110000014" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
+        android:orientation="vertical">
+
+
+    </LinearLayout>
+
     <TextView
         android:textStyle="bold"
         android:id="@+id/tvUsername"
@@ -89,14 +100,14 @@
             android:layout_height="50dp"
             android:layout_weight="3"
             android:gravity="center"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="30sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/detailToolbar"
             app:layout_constraintVertical_bias="0.64"
-            android:background="#FF9800"/>
+            android:background="#777676"/>
 
 
     </LinearLayout>
@@ -129,14 +140,14 @@
             android:layout_height="50dp"
             android:layout_weight="3"
             android:gravity="center"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="30sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/detailToolbar"
             app:layout_constraintVertical_bias="0.8"
-            android:background="#FF9800"/>
+            android:background="#777676"/>
 
 
     </LinearLayout>
@@ -154,6 +165,7 @@
         android:textStyle="bold"
         android:textColor="@color/black"
         android:textSize="20sp"/>
+
 
 
 
